test/expected/declare_hc32.out
declare x as short char32_t
        ^
9: error: "short char32_t" is illegal for built-in type
